--- a/HomeATF.Appium/HomeATF.Appium.csproj
+++ b/HomeATF.Appium/HomeATF.Appium.csproj
@@ -31,8 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Appium.Net, Version=4.1.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Appium.WebDriver.4.1.1\lib\net45\Appium.Net.dll</HintPath>
+    <Reference Include="Appium.Net, Version=4.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Appium.WebDriver.4.2.1\lib\net45\Appium.Net.dll</HintPath>
     </Reference>
     <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.4.3.1\lib\net45\Castle.Core.dll</HintPath>
@@ -78,6 +78,7 @@
     <Compile Include="Dimensions.cs" />
     <Compile Include="Element.cs" />
     <Compile Include="Enumerations\Keys.cs" />
+    <Compile Include="Enumerations\MouseButton.cs" />
     <Compile Include="Extensions\IEnumerableExtensions.cs" />
     <Compile Include="Factories\AppiumUiWrapperFactory.cs" />
     <Compile Include="Interfaces\IAwaitHandler.cs" />
