--- a/HomeATF.TestAutomation/HomeATF.TestAutomation.csproj
+++ b/HomeATF.TestAutomation/HomeATF.TestAutomation.csproj
@@ -57,6 +57,11 @@
   <ItemGroup>
     <Compile Include="BaseTestFixture.cs" />
     <Compile Include="Helpers\NotepadApp.cs" />
+    <Compile Include="Helpers\VerificationTools\Constraints\MenuItemConstraint.cs" />
+    <Compile Include="Helpers\VerificationTools\ExpectedElements\ExpectedElement.cs" />
+    <Compile Include="Helpers\VerificationTools\ExpectedElements\ExpectedMenuItemElement.cs" />
+    <Compile Include="Helpers\VerificationTools\NotepadConstraints.cs" />
+    <Compile Include="Helpers\VerificationTools\VerificationTools.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\BasicTests.cs" />
   </ItemGroup>
